--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.redsmiletv</groupId>
-    <artifactId>TestDependency</artifactId>
+    <artifactId>testdependency</artifactId>
     <version>0.1</version>
 
     <properties>
